# NeoLiminal

./: .gitignore  CMakeLists.txt  README.md  Runfile.rb
.github/workflows/: release.yml
Lib/NeoLiminal.component/Contents/: Info.plist
Lib/NeoLiminal.vst3/Contents/: Info.plist
Lib/NeoLiminal.vst3/Contents/Resources/: moduleinfo.json
Lib/NeoLiminal.vst3/Contents/_CodeSignature/: CodeResources
Source/: AppVersion.cpp  AppVersion.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DSPUtils.h  DatalossProcessor.cpp  DatalossProcessor.h  FeedbackProcessor.cpp  FeedbackProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h  TapeProcessor.cpp  TapeProcessor.h
